--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="favorite_dirt.html">Types of Dirt<span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="table.html">Types of Dirt<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="stamps.html">Stamp Collection</a>
