--- a/app/public/index.html
+++ b/app/public/index.html
@@ -29,14 +29,14 @@
 
 
 <div id="randomUser">
-<img v-bind:src="user.picture.large"><br> <!--https://vuejs.org/v2/guide/-->
-<span>Name: {{ user.name.title }} {{ user.name.first }} {{ user.name.last  }}</span><br>
-<span>Country of Origin: {{  user.nat  }}</span><br>
-<span>DOB: {{ user.dob.date }}</span><br>
-<span>Age: {{ user.dob.age }}</span><br>
+<img v-bind:src="user.picture.large"><br><br> <!--https://vuejs.org/v2/guide/-->
+<span>Name: {{ user.name.title }} {{ user.name.first }} {{ user.name.last  }}</span><br><br>
+<span>Country of Origin: {{  user.nat  }}</span><br><br>
+<span>DOB: {{ user.dob.date }}</span><br><br>
+<span>Age: {{ user.dob.age }}</span><br><br>
 <a href="mailto:{{ user.email }}"><span>Email: {{ user.email }}</span></a> <!--https://www.buildableweb.com/article?articleTitle=making-a-clickable-link-to-an-email-address--1294531104--81--howto -->
 <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-<script src="js/randomperson.app.js"></script> <!--https://randomuser.me/-->
+<script src="js/randomperson.js"></script> <!--https://randomuser.me/-->
 
 </body>
 </html>
